kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lestvica-transparentnosti-deployment
  labels:
    app: lestvica-transparentnosti
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lestvica-transparentnosti
  template:
    metadata:
      labels:
        app: lestvica-transparentnosti
    spec:
      containers:
        - name: lestvica-transparentnosti
          image: lestvica-transparentnosti
          command:
            - gunicorn
            - api.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 50m
