kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lestvica-transparentnosti
spec:
  selector:
    app: lestvica-transparentnosti
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
